Fix mobile video too wide.

--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ div {
 
     .sketch-item {
         height: auto;
+        max-width: 100%;
+        width: 100%;
     }
 
     .content-container {
